ingress/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        app.kubernetes.io/name: backend
    spec:
      restartPolicy: Always
      containers:
        - name: sample-app
          image: sample-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
