ingress/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
