ingress/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
